--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "adamBernard",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ab255.github.io/portfolio/",
+  "homepage": "https://calm-dawn-88417.herokuapp.com/",
   "devDependencies": {
     "gh-pages": "^0.12.0",
     "react-scripts": "0.8.4"
